# pc-monitoring

./: .gitignore  setup.cfg  setup.py
src/: file_service.py  main.py  monitoring_pc.py  plot_logs.py
src/monitoring/: Disk.py  RAM.py  monitoring_service.py
