[metadata]
    name = pc-monitoring
    version = attr: pc_monitoring.VERSION
    author = pPlanello
    author_email = pplanellodev@gmail.com
    description = It is a package to monitoring pc with logs and graphics
[options]
    zip_safe = False
    include_package_data = True
    packages = find:
    python_requires = >=3.10
    install_requires =
        psutil
        pandas
        openpyxl
[options.package_data]
    * = *.txt, *.rst
    hello = *.msg
[options.entry_points]
    console_scripts =
        executable-name = pc_monitoring.module:function
[options.extras_require]
    pdf = ReportLab>=1.2; RXP
    rest = docutils>=0.3; pack ==1.1, ==1.3
[options.packages.find]
    exclude =
        examples*
        tools*
        docs*
        pc_monitoring.tests*
